--- a/RotaFlex/angular/ROTAFLEX/src/shared/header/header.component.html
+++ b/RotaFlex/angular/ROTAFLEX/src/shared/header/header.component.html
@@ -8,7 +8,8 @@
   
     <!-- Menu desktop -->
     <nav class="nav-buttons desktop-menu">
-      <a mat-button routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+      <a mat-button routerLink="/home" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+      <a mat-button routerLink="/TransportePublico" routerLinkActive="active-link">Transportes Públicos</a>
       <a mat-button routerLink="/login" routerLinkActive="active-link">Login</a>
     </nav>
   </mat-toolbar>
