--- a/RotaFlex/angular/ROTAFLEX/src/app/pages/login/login.component.html
+++ b/RotaFlex/angular/ROTAFLEX/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="form" (ngSubmit)="submit()">
     <label for="email">Email</label>
     <input id="email" formControlName="email" type="email" />
-    <div *ngIf="form.get('email').invalid && form.get('email').touched" class="error">
+    <div ngIf="form.get('email').invalid && form.get('email').touched" class="error">
       Email inválido.
     </div>
 
