--- a/RotaFlex/angular/ROTAFLEX/src/shared/footer/footer.component.css
+++ b/RotaFlex/angular/ROTAFLEX/src/shared/footer/footer.component.css
@@ -1,30 +1,34 @@
+body {
+  padding-bottom: 50px; /* deve ser igual à altura do footer */
+}
+
 .footer-toolbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    padding: 16px;
-    font-size: 0.9rem;
-    color: white;
-    background-color: #0d47a1;
-    text-align: center;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
-  }
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px;
+  font-size: 0.9rem;
+  color: white;
+  background-color: #0d47a1;
+  text-align: center;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* garante que fique na frente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px; /* altura fixa do footer */
+}
   
   .footer-content {
     display: flex;
     flex-direction: column;
-    gap: 4px;
   }
   
-  /* Responsividade */
-  @media (max-width: 768px) {
-    .footer-toolbar {
-      font-size: 0.8rem;
-      padding: 12px;
-      margin-top: 50px;
-    }
+/* Responsividade */
+@media (max-width: 768px) {
+  .footer-toolbar {
+    font-size: 0.8rem;
+    padding: 5px;
+    height: 60px; /* ajusta se precisar mais altura no mobile */
   }
-  
+}
