--- a/RotaFlex/angular/ROTAFLEX/src/shared/footer/footer.component.html
+++ b/RotaFlex/angular/ROTAFLEX/src/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="footer-toolbar">
     <div class="footer-content">
-      <div>📄 PROJETO INTEGRADOR SENAC EAD - ROTAFLEX &copy; {{ currentYear }} Alunos: Carina Fernandes - Guilherme Bomfim - Letícia Menezes - Paulo Henrique - Rodrigo Soares</div>
+      <div>📄 PROJETO INTEGRADOR SENAC EAD - ROTAFLEX &copy; {{ currentYear }} Alunos: Guilherme Bomfim - Letícia Menezes - Paulo Henrique - Rodrigo Soares</div>
     </div>
   </mat-toolbar>
